# audio-eq

./: CMakeLists.txt  main.cpp
include/audioeq/: audioeq.h  core.h  err.h  filter.h  objects.h
include/audioeq/filters/: low_pass.h
include/audioeq/utils/: defer.h
libaudioeq/: CMakeLists.txt  core.cpp  filter.cpp  objects.cpp
libaudioeq/filters/: low_pass.cpp
